--- a/Week 3 Lab - ANOVA/NTAQ_Lab 3 Report.Rmd
+++ b/Week 3 Lab - ANOVA/NTAQ_Lab 3 Report.Rmd
@@ -7,17 +7,11 @@ output:
   html_document: default
 chunk_output_type: inline
 indent: true
-header-includes:
-   - \setlength\parindent{24pt}
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = F)
 ```
-
-Similar to last week you will be turning in 2 documents - a knitted PDF in the form of a lab write up (not as formal as last week, feel free to just answer each section outlined below). This document should not include any r code or errors. Include appropriate figures in the lab write up or an appendix. 
-
-Also turn in your .Rmd file which includes your code. Please annotate your code to explain what different sections mean.
 
 # Question 1 - 20 points
 Your assignment is to conduct a one-way ANOVA to determine if the average weight of confiscated elephant tusks has changed over time. Elephants are poached for their ivory, and USFWS authorities confiscate ivory when they find it entering the country. The data in TuskData.csv are the average weights of elephant tusks from 20 different seizure sites in 1970, 1990, and 2010. 
@@ -65,19 +59,17 @@ tusk_var <- tusk %>% levene_test(Tusk.kg~as.character(Year))
 tusk_var
 
 ```
-\hspace{\parindent} a. No outlier was detected, as R returned an empty data frame.
-
-\hspace{\parindent} b. Shapiro-Wilk tests for three Year groups returned insignificant p-values, which were `r round(tusk_normal$p[tusk_normal$Year == 1970], 2)`, `r round(tusk_normal$p[tusk_normal$Year == 1990], 2)`, and `r round(tusk_normal$p[tusk_normal$Year == 2010], 2)`, for 1970, 1990, and 2010, respectively. QQ plot of data also looked normal and most data points fell within the 95% C.I. (Fig. 1). 
-
-```{r message=F, warning=F, fig.align='center'}
+a. No outlier was detected, as R returned an empty data frame.
+b. Shapiro-Wilk tests for three Year groups returned insignificant p-values, which were `r round(tusk_normal$p[tusk_normal$Year == 1970], 2)`, `r round(tusk_normal$p[tusk_normal$Year == 1990], 2)`, and `r round(tusk_normal$p[tusk_normal$Year == 2010], 2)`, for 1970, 1990, and 2010, respectively. QQ plot of data also looked normal and most data points fell within the 95% C.I. (Fig. 1). 
+```{r message=F, warning=F, fig.align='center',fig.height=3, fig.width=6}
 #plotting QQplot of data to be sure
 ggqqplot(tusk, "Tusk.kg", facet.by = "Year")
 ```
 \begin{center}
 Figure 1. QQ plot of tusk weight data collected in 1970, 1990, and 2010.
 \end{center}
-\hspace{\parindent} c. Levene's test for equal variance returned the significant p-value of `r round(tusk_var$p,2)`. Therefore, there is a significant difference in variance among years (Fig. 2).
-```{r message=F, warning=F, fig.align='center'}
+c. Levene's test for equal variance returned the significant p-value of `r round(tusk_var$p,2)`. Therefore, there is a significant difference in variance among years (Fig. 2).
+```{r message=F, warning=F, fig.align='center', fig.height=4, fig.width=6}
 #plotting variance plot to be sure
 model  <- lm(Tusk.kg~as.character(Year), data = tusk)
 plot(model, 1)
@@ -85,33 +77,25 @@ plot(model, 1)
 \begin{center}
 Figure 2. Residual plot of tusk weight data collected in 1970, 1990, and 2010.
 \end{center}
-\hspace{\parindent} d. Therefore, I am going to conduct a Welch one-way ANOVA, as the assumption of equal variance was violated.
+d. Therefore, I am going to conduct a Welch one-way ANOVA, as the assumption of equal variance was violated.
 
 3. Welch one-way ANOVA test result
-
 ```{r message=F,warning=F, results=F}
 tusk.aov <- tusk %>% welch_anova_test(Tusk.kg~Year)
 tusk.aov
 ```
-\hspace{\parindent} There is a significant difference in mean of tusk weight among years with a p-value of `r tusk.aov$p` and F (2, 35.36) = `r round(tusk.aov$statistic, 2)`.
+There is a significant difference in mean of tusk weight among years with a p-value of `r tusk.aov$p` and F (2, 35.36) = `r round(tusk.aov$statistic, 2)`.
 
 4. Post-hoc test result
 ```{r message=F, warning=F, results=F}
 tusk.gh <- tusk %>% games_howell_test(Tusk.kg~Year)
 tusk.gh
 
-tusk.gh.test <- tibble::tribble(
-  ~group1, ~group2,   ~p.adj,
-    "1970",     "1990", 5.55e-16,
-    "1970",     "2010", 4.25e-14,
-      "1990",     "2010", 6.30e-02
-  )
-tusk.gh.test
 tusk.gh$p.adj[tusk.gh$group2 == 2010 & tusk.gh$group1 == 1970]
 ```
-\hspace{\parindent} Games-Howell post hoc test showd that there is a significant difference in mean of tusk weight between 1970 and 1990 (p = `r tusk.gh$p.adj[tusk.gh$group2 == 1990]`) and between 1970 and 2010 (p = `r tusk.gh$p.adj[tusk.gh$group2 == 2010 & tusk.gh$group1 == 1970]`).
+Games-Howell post hoc test showd that there is a significant difference in mean of tusk weight between 1970 and 1990 (p = `r tusk.gh$p.adj[tusk.gh$group2 == 1990]`) and between 1970 and 2010 (p = `r tusk.gh$p.adj[tusk.gh$group2 == 2010 & tusk.gh$group1 == 1970]`).
 ```{r message=F,warning=F}
-tusk.gh <- tusk.gh %>% add_xy_position(x = "group", step.increase = 1)
+tusk.gh <- tusk.gh %>% add_xy_position(x = "Year", step.increase = 1)
 tusk$Year = as.factor(tusk$Year)
 ggboxplot(tusk, x = "Year", y = "Tusk.kg") +
   stat_pvalue_manual(tusk.gh, hide.ns = T, label =NULL) +
@@ -120,17 +104,10 @@ ggboxplot(tusk, x = "Year", y = "Tusk.kg") +
     caption = get_pwc_label(tusk.gh)
     )
 
-ggboxplot(tusk, x = "Year", y = "Tusk.kg") +
-  stat_pvalue_manual(
-    tusk.gh.test, 
-    y.position = 35, step.increase = 0.1,
-    label = "p.adj"
-    )
-
 ```
 
+# Question 2 - 20 points
 
-#Question 2 - 20 points 
 We want to test whether four different antibiotics result in different levels of antibodies in the blood. Sixteen people are randomly assigned one of the four antibiotics, and samples of their blood are taken for analysis. To process the blood samples as quickly as possible, the samples are sent to four different laboratories – each lab receives one blood sample treated with one of the four antibiotics.
 
 Each laboratory has its own instruments and personnel that might cause variation in the results across laboratories. Our variable of interest is the level of antibodies in the blood samples; laboratories are blocks whose uncontrolled effects we want to separate from the main effect.
@@ -142,8 +119,90 @@ results <- (c(9.3, 9.4, 9.6, 10, 9.4, 9.3, 9.8, 9.9, 9.2,
 dlabs <- data.frame(lab = factor(lab),
 antibiotic = factor(antibiotic), results)
 ```
+## Answer
 
-•please state the H0 and Ha of your test - 2.5
-•describe how you checked the assumptions of your statistical test 5
-•report the results of the ANOVA and a post-hoc test. 7.5
-•Include at least one graph. 5 
+1. H~0~: The average levels of antibodies in the blood among four different antibiotics have no difference, after accounting for the effect of the laboratory.
+
+H~a~: At least one pair of antibiotics has a significantly different effect on the average level of antibodies, after accounting for the effect of the laboratory.
+
+2. Check assumptions of blocked ANOVA:
+
+```{r message=F, warning=F, results=F}
+#identify outliers
+dlabs %>%
+  group_by(antibiotic) %>%
+  identify_outliers(results)
+
+#check for normality
+
+dlabs %>% 
+  group_by(antibiotic) %>%
+  summarise(length_results = length(results))
+
+# only 20 for each year, do Shapiro-Wilk
+
+dlabs_normal <- dlabs %>%
+  group_by(antibiotic) %>%
+  shapiro_test(results)
+dlabs_normal$p[dlabs_normal$antibiotic == 1]
+```
+a. There is one outlier reported, but not an extreme one. 
+b. The average levels of antibodies among four types of antibiotics are normally distributed, as Shapiro-Wilk test reported non-significant p-values, which were `r round(dlabs_normal$p[dlabs_normal$antibiotic == 1],2)`, `r round(dlabs_normal$p[dlabs_normal$antibiotic == 2], 2)`, `r round(dlabs_normal$p[dlabs_normal$antibiotic == 3], 2)`, and `r round(dlabs_normal$p[dlabs_normal$antibiotic == 4], 2)`, for antibiotics 1, 2, 3, and 4, respectively. Normality of antibiotic level is shown in Fig. 3, although data points are quite scattered and sparse.
+
+```{r message=F, warning=F}
+ggqqplot(dlabs, "results", facet.by = "antibiotic")
+```
+\begin{center}
+Figure 3. QQ plot of antibodies level collected from four different types of antibiotics. 
+\end{center}
+```{r message=F, warning=F, results=F}
+dlabs_treat_var <- dlabs %>% levene_test(results ~ antibiotic)
+dlabs_block_var <- dlabs %>% levene_test(results ~ lab)
+```
+
+c. Levene's test for equal variance returned the non-significant p-value of `r round(dlabs_treat_var$p,2)` across treatments and of `r round(dlabs_block_var$p,2)` across blocks. Therefore, the assumption of equal variance is not violated (Fig. 3).
+
+```{r message=F, warning=F, fig.height=3, fig.width=6}
+dlabs %>% ggplot(aes(x = antibiotic, y = results)) + geom_boxplot() +
+  theme_minimal()
+```
+\begin{center}
+Figure 4. Box plot of antibodies level collected from four different types of antibiotics. 
+\end{center}
+
+3. Block ANOVA test result:
+
+```{r message=F, warning=F, results=F}
+dlabs_aov <- dlabs %>% anova_test(results ~ antibiotic + lab, detailed =T)
+dlabs_aov
+```
+Results showed that antibiotic treatment (p = `r dlabs_aov$p[dlabs_aov$Effect == "antibiotic"]`) and lab (p = `r dlabs_aov$p[dlabs_aov$Effect == "lab"]`) had significant effects on the average level of antibodies. 
+
+4. Post-hoc test result:
+
+```{r message=F, warning=F, results=F}
+dlabs_pwc <- dlabs %>% 
+  pairwise_t_test(
+    results ~ antibiotic, paired = TRUE,
+    p.adjust.method = "bonferroni"
+    )
+dlabs_pwc
+```
+Pair-wise comparison showed that the average levels of antibodies were different among:
+
+a. Antibiotic 1 and 3 (p = `r dlabs_pwc$p.adj[dlabs_pwc$group1 == 1 & dlabs_pwc$group2 == 3]`)
+
+b. Antibiotic 1 and 4 (p = `r dlabs_pwc$p.adj[dlabs_pwc$group1 == 1 & dlabs_pwc$group2 == 4]`)
+
+c. Antibiotic 2 and 4 (p = `r dlabs_pwc$p.adj[dlabs_pwc$group1 == 2 & dlabs_pwc$group2 == 4]`)
+
+```{r message=F, warning=F, results=F}
+dlabs_pwc <- dlabs_pwc %>% add_xy_position(x = "antibiotic", step.increase = 1)
+dlabs$antibiotic = as.factor(dlabs$antibiotic)
+ggboxplot(dlabs, x = "antibiotic", y = "results") +
+  stat_pvalue_manual(dlabs_pwc, hide.ns = T, label =NULL) +
+  labs(
+    subtitle = get_test_label(dlabs_aov, detailed = T),
+    caption = get_pwc_label(dlabs_pwc)
+    )
+```
