--- a/Week 4 Lab - Linear Reg/NTAQ_Week 4 Lab Report.Rmd
+++ b/Week 4 Lab - Linear Reg/NTAQ_Week 4 Lab Report.Rmd
@@ -1,14 +1,43 @@
 ---
 title: "Week_4_Problem_Set"
-author: "Sarah Roberts"
-date: "2023-01-24"
-output: html_document
+author: "Nguyen Tien Anh Quach"
+date: "`r Sys.Date()`"
+output:
+  pdf_document: default
+  html_document: default
+chunk_output_type: inline
+indent: true
 ---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = F)
+```
+
 #Questions - 20 points per regression (40 points total)
 Your assignment is to conduct two different linear regressions on the TreePlots.csv data: (1) mean tree diameter (mDBH.cm) versus mean height (mH.m), and (2) mean height (mH.m) versus mean wood density (mWD.g.m3). In the first regression, diameter should be your dependent variable. In the second regression, mean height should be your dependent variable. Consider the effect of outliers and examine your qqplots when checking the assumptions of your model. For each regression, write a 1-page description of your analysis, results, and inference. The write-up should include the following information:
 
 
 • Null and alternative hypotheses - 2.5
+1. Mean tree diameter vs. mean height
+
+H~0~: There is no significant linear relationship between mean height and mean tree diameter.
+H~a~: There is a significant linear relationship between mean height and mean tree diameter.
+
+2. Linear model result:
+
+```{r message=F, warning=F}
+setwd("C:/GitHub Projects/enec-562/Week 4 Lab - Linear Reg")
+
+tree <- read.csv("TreePlots.csv") #load data
+
+#run model
+
+height_diam <- lm(mDBH.cm ~ mH.m, data=tree)
+summary(height_diam)
+```
+Mean tree height in forest plots has a significantly positive linear relationship with mean tree diameter. With a 1 m increase in mean  tree height resulting in a 1.86 cm  increase in mean tree diameter (R$^2$ = 0.95, Adj. R$^2$ = 0.95, F(1,71) = 1286, p < 0.001). 
+
+
 • Results of your statistical model(s), interpreting your model in 2-3 sentences that include the appropriate
 reporting of the statistics - 2.5
 • An interpretation of the regression model (equation) from the analysis (e.g. how mean height varies with different levels of wood density). 5
